2006-02-02  Yves Combe  <yves@ycombe.net>

	Display bonus and end of game when 25 beans are captured.

	* src/boards/awele.c: (updateCapturedBeans):

2006-02-02  Bruno coudoin  <bruno.coudoin@free.fr>

	
	* tools/list_missing_sounds.sh: By Jose Jorge. A nice utility to compare the locale
	  translations status of voices to English.

2006-01-31  Yves Combe,,,  <yves@ycombe.net>

	fix configurables boards in c to configure from bar.

	* src/boards/colors.c: (conf_ok), (colors_config_start),
	(start_board):
	* src/boards/gletters.c: (level_set_score), (conf_ok),
	(gletter_config_start):
	* src/boards/imageid.c: (config_start):
	* src/boards/missingletter.c: (config_start):
	* src/boards/reading.c: (reading_config_start):
	* src/boards/smallnumbers.c: (start_board),
	(smallnumbers_create_item), (conf_ok), (smallnumber_config_start):

2006-01-31  Yves Combe  <yves@ycombe.net>

	fix /reading boards to configure from bar.

	* src/boards/click_on_letter.c: (conf_ok):
	* src/boards/imageid.c: (start_board), (conf_ok), (config_start):
	* src/boards/missingletter.c: (start_board), (conf_ok):
	* src/boards/python/pythontest.py:
	* src/boards/reading.c: (start_board), (conf_ok),
	(reading_config_start):
	* src/boards/shapegame.c: (conf_ok):

2006-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added copyright header following formal argeement of
	  the author Pedro Felzenszwalb <pff@cs.uchicago.edu>

	* tools/shapegame/.cvsignore:
	* tools/shapegame/dt/.cvsignore:
	* tools/shapegame/dt/README:
	* tools/shapegame/dt/dt.cpp:
	* tools/shapegame/dt/dt.h:
	* tools/shapegame/dt/image.h:
	* tools/shapegame/dt/imconv.h:
	* tools/shapegame/dt/imutil.h:
	* tools/shapegame/dt/misc.h:
	* tools/shapegame/dt/pnmfile.h:
	* tools/shapegame/nice_target_spot.cpp:

2006-01-30  Yves Combe  <yves@ycombe.net>

	fix configuration window was not visible in fullscreen mode, using gtk_dialog.

	* src/gcompris/board_config.c: (gcompris_close_board_conf),